include $(top_srcdir)/Makefile.global

noinst_LIBRARIES = libdummy.a
libdummy_a_SOURCES =	Bezier.cc Bezier.h				\
			Clip.cc Clip.h					\
			DrawFunc.cc DrawFunc.h				\
			DrawfuncData.cc DrawfuncData.h			\
			Horner.cc Horner.h				\
			Hornergroup.cc Hornergroup.h			\
			MappingMatrix.cc MappingMatrix.h		\
			MultiVariatePolynom.cc MultiVariatePolynom.h	\
			Position.cc Position.h				\
			Sturmchain.cc Sturmchain.h			\
			UniVariatePolynom.cc UniVariatePolynom.h	\
			Vector.cc Vector.h				\
			HornergroupXY.cc HornergroupXY.h		\
			HornergroupXYZ.cc HornergroupXYZ.h		\
			RationalHornerXY.cc RationalHornerXY.h		\
			MultiIndex.h					\
			Monomial.h

libdummy.a:: $(libdummy_a_OBJECTS) $(libdummy_a_DEPENDENCIES)
