include $(top_srcdir)/Makefile.global

noinst_LIBRARIES = libdummy.a
libdummy_a_SOURCES =  eps.cc ps.cc       tiffprint.cc     xbitmap.cc\
	sun.cc    xwd.cc \
	sun.h      xbitmap.h \
	eps.h      ps.h       tiffprint.h     xwd.h \
	jpeg.h jpeg.cc



libdummy.a:: $(libdummy_a_OBJECTS) $(libdummy_a_DEPENDENCIES)

